  syntax = "proto3";

  package authorization;

  service Authorization {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Signup (SignupRequest) returns (SignupResponse);
  }

  message SignupRequest {
    string email = 1;
    string password = 2;
  }

  message SignupResponse {
    string message = 1;
  }

  message LoginRequest {
    string email = 1;
    string password = 2;
  }

  message LoginResponse {
    int32 account_id = 1;
    bool status = 2;

  }
